# pollution_viewer

./: .gitignore  CMakeLists.txt  README.md
data/: ParticulePM10Aout2012.ods  StationsAirRhoneAlpes.kmz  particules.data  script.vim  station_types  stations.data
modules/: CUDA_compute_capability.cmake  FindEigen3.cmake  FindLog4cpp.cmake
src/: config.hpp  dataParser.cpp  dataParser.hpp  main.cpp  mainFuncs.cpp  mainFuncs.hpp  station.cpp  station.hpp  stationParser.cpp  stationParser.hpp
src/image/: colorizer.hpp  colors.cpp  colors.hpp  image.cpp  image.hpp  image.tpp  imageGenerator.hpp  linearColorizer.hpp  overlayGenerator.hpp  stringBlitter.cpp  stringBlitter.hpp
src/interpolation/: README.md  interpolation.py  interpolator.hpp  multiQuadricInterpolator.hpp  multiQuadricInterpolator.tpp  multiQuadrics.py  shepardQuadratic.py  shepardSimple.py  simpleShepardInterpolator.hpp  simpleShepardInterpolator.tpp  weightFunction.py
src/isolines/: isocontour.hpp  isoline.hpp  isolineGenerator.hpp  isolineGenerator.tpp  isolineUtils.hpp  lines.cpp  lines.hpp  searchBorder.hpp
src/kml/: kmlFile.cpp  kmlFile.hpp  kmlGenerator.cpp  kmlGenerator.hpp  kmlUtils.hpp
src/parsing/: dataParser.cpp  dataParser.hpp  stationParser.cpp  stationParser.hpp
src/python/: interpolation.py  leastSquared.py  multiQuadrics.py  shepardQuadratic.py  shepardSimple.py  weightFunction.py
src/station/: sensorData.hpp  sensorDataArray.hpp  station.cpp  station.hpp  stationType.cpp  stationType.hpp
src/utils/: coords.hpp  defines.hpp  freetypeUtils.cpp  freetypeUtils.hpp  mainFuncs.cpp  utils.hpp  vec.cu  vec.hpp
src/utils/logs/: log.cpp  log.hpp
